# Checklist

./: .gitignore  Checklist.spec  README.md  main.py  pyproject.toml  requirements.txt
assets/: icon.icns
checklist/: checklist_view.py  config.py  indicators.py  item_widget.py  main_window.py  models.py  paths.py  sidebar.py  state_editor.py  theme.py  xml_io.py
defaults/: Sample Checklist.xml  config.json
