[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "checklist"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "lxml>=5.0",
]

[project.optional-dependencies]
bundle = ["pyinstaller>=6.0"]

[project.scripts]
checklist = "main:main"

[project.gui-scripts]
checklist-gui = "main:main"

[tool.setuptools.packages.find]
include = ["checklist*"]
